# lipobatterytester

./: .gitignore  LICENSE  README.md  platformio.ini
docs/: ALGORITHM.md  ARDUINO_PRO_MINI.md  SCHEMATIC.md
include/: BatteryAnalyzer.h  DebugLogger.h  DisplayManager.h  VoltageReader.h  config.h  config_arduino.h
simulator/: CMakeLists.txt  Makefile  README.md  lipo_simulator  main.cpp  run_simulator.bat
src/: BatteryAnalyzer.cpp  DebugLogger.cpp  DisplayManager.cpp  VoltageReader.cpp  main.cpp
test/: test_battery_analyzer.cpp
